--- a/main/pom.xml
+++ b/main/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>akka-projection-core_${scala.binary.version}</artifactId>
       <version>1.5.9</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.32</version>
+    </dependency>
   </dependencies>
   <properties>
     <scala.binary.version>2.13</scala.binary.version>
