--- a/main/pom.xml
+++ b/main/pom.xml
@@ -26,6 +26,8 @@
     </dependency>
   </dependencies>
   <properties>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
     <scala.binary.version>2.13</scala.binary.version>
   </properties>
   <repositories>
