--- a/main/pom.xml
+++ b/main/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.restaurant.akka</groupId>
   <artifactId>main</artifactId>
@@ -7,6 +8,11 @@
   <version>1.0-SNAPSHOT</version>
   <name>main</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <scala.binary.version>2.13</scala.binary.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -19,10 +25,13 @@
       <artifactId>akka-projection-core_${scala.binary.version}</artifactId>
       <version>1.5.9</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.32</version>
+    </dependency>
   </dependencies>
-  <properties>
-    <scala.binary.version>2.13</scala.binary.version>
-  </properties>
+
   <repositories>
     <repository>
       <id>akka-repository</id>
